[feature/Peer-5-CoreValuesCrud] Units tests updated and delete api eliminated
